--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         tools:ignore="MissingClass"
         tools:listitem="@layout/card_post"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/content"
+        app:layout_constraintBottom_toTopOf="@id/edit_pencil"
         />
 
 
@@ -33,7 +33,6 @@
         android:importantForAutofill="no"
         app:layout_constraintEnd_toStartOf="@+id/save"
         app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintBottom_toBottomOf="parent" />
 
     <ImageView
@@ -44,5 +43,40 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/content"
         app:srcCompat="@drawable/ic_save" />
+
+
+    <!-- "шапка" редактирования: -->
+    <ImageView
+        android:id="@+id/edit_pencil"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_edit_pencil" />
+    <ImageView
+        android:id="@+id/edit_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_cancel_24" />
+    <TextView
+        android:id="@+id/edit_header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:textSize="@dimen/default_content_textSize"
+        app:layout_constraintBottom_toTopOf="@+id/content"
+        app:layout_constraintStart_toEndOf="@+id/edit_pencil"
+        android:text="@string/editing_header" />
+    <!-- объединяем несколько элементов в группу, чтобы управлять ими из кода вместе: -->
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group_edit_header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:visibility="visible"
+        android:visibility="gone"
+        app:constraint_referenced_ids="edit_pencil,edit_cancel,edit_header" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
