--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
     <!-- почему-то с recyclerview_version="2.6.0" была ошибка на androidx.recyclerview.widget.RecyclerView -->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:context=".MainActivity"
+        tools:context=".activity.MainActivity"
         tools:ignore="MissingClass"
         tools:listitem="@layout/card_post"
         app:layout_constraintTop_toTopOf="parent"
@@ -31,19 +31,27 @@
         android:background="@android:color/transparent"
         android:hint="@string/content_hint"
         android:importantForAutofill="no"
-        app:layout_constraintEnd_toStartOf="@+id/save"
+        app:layout_constraintEnd_toStartOf="@+id/add"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <ImageView
+    <!--<ImageView
         android:id="@+id/save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/content"
-        app:srcCompat="@drawable/ic_save" />
-
+        app:srcCompat="@drawable/ic_save" />-->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="@dimen/medium_icons_margin"
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        android:contentDescription="@string/add_new_post" />
 
     <!-- "шапка" редактирования: -->
     <ImageView
