--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="default_content_textSize">15sp</dimen>
     <dimen name="small_text_margin">5dp</dimen>
     <dimen name="medium_icons_margin">26dp</dimen>
+    <dimen name="default_BottomAppBar_m3_height">80dp</dimen>
 </resources>
