--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Homework_2_resources" parent="Theme.Material3.DayNight"><!--Theme.MaterialComponents.DayNight.DarkActionBar-->
+    <style name="Theme.Homework_2_resources" parent="Theme.Material3.DayNight"><!--Theme.MaterialComponents.DayNight.DarkActionBar    Theme.Material3.DayNight-->
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -15,21 +15,25 @@
     </style>
 
 
-    <style name="smallButtonsStyle" parent="Widget.Material3.Button.TextButton"><!-- Widget.MaterialComponents.Button.TextButton -->
+    <style name="SmallButtonsStyle" parent="Widget.Material3.Button.TextButton"><!-- Widget.MaterialComponents.Button.TextButton -->
         <item name="android:textSize">16sp</item>
         <item name="iconTint">?attr/colorControlNormal</item>
         <item name="android:textColor">?attr/colorControlNormal</item>
     </style>
-    <style name="LikeStyle" parent="smallButtonsStyle">
+    <style name="LikeStyle" parent="SmallButtonsStyle">
         <item name="iconTint">@color/like_button_tint</item>
     </style>
-    <style name="buttonMoreStyle2" parent="Widget.Material3.Button.IconButton">
+    <style name="ButtonMoreStyle" parent="Widget.Material3.Button.IconButton">
         <item name="iconTint">@color/more_button_tint</item>
-        <item name="android:background">@color/more_button_background</item>
-
-        <!-- почему не работает: -->
-        <item name="strokeColor">#eeeeee</item>
-        <item name="strokeWidth">1dp</item>
+        <!--<item name="background" >@drawable/background_button_active</item>--><!--state_checked="true"-->
+        <!--<item name="android:background">@color/more_button_background</item>-->
+        <item name="strokeColor">#ff0000</item>
+        <item name="strokeWidth">2dp</item>
     </style>
 
+
+<!-- с гитхаба: -->
+    <!--<style name="Widget.Material3.BottomAppBar" parent="Theme.Material3.DayNight">
+
+    </style>-->
 </resources>
