--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -66,6 +66,23 @@
         app:barrierDirection="bottom"
         android:layout_marginBottom="@dimen/small_text_margin"/>
 
+    <ImageView
+        android:id="@+id/video"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/dummy_img"
+        app:layout_constraintTop_toTopOf="@id/horizontalBarrier1"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="@dimen/default_images_margin"/>
+    <ImageView
+        android:id="@+id/videoButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/default_images_margin"
+        android:src="@drawable/youtube_btn"
+        app:layout_constraintTop_toTopOf="@id/video"
+        app:layout_constraintBottom_toBottomOf="@+id/video"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/content"
@@ -73,7 +90,7 @@
         android:layout_height="wrap_content"
         tools:text="@sample/posts.json/data/content"
         app:layout_constraintStart_toStartOf="@id/avatar"
-        app:layout_constraintTop_toBottomOf="@id/horizontalBarrier1"
+        app:layout_constraintTop_toBottomOf="@id/video"
         app:layout_constraintEnd_toEndOf="parent"
         android:textSize="@dimen/default_content_textSize"/>
 
